--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,6 +1,28 @@
-# cache modules
+# Node modules
 node_modules/
-package-lock.json
 
-# build modules
-build/
+# Build output
+dist/
+
+# Log files
+*.log
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# IDE settings
+.vscode/
+.idea/
+
+# OS-specific files
+.DS_Store
+Thumbs.db
+
+# Coverage directory used by tools like istanbul
+coverage/
+
+# Temporary files
+*.tmp
+*.temp
