--- a/.github/workflows/frontend_build.yml
+++ b/.github/workflows/frontend_build.yml
@@ -25,7 +25,11 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
 
       - name: Install dependencies
-        run: npm install
-
+        run: |
+            cd frontend
+            npm install
+  
       - name: Build project
-        run: npm run build
+        run: |
+            cd frontend
+            npm run build
