--- a/.github/workflows/auth_deploy.yml
+++ b/.github/workflows/auth_deploy.yml
@@ -33,8 +33,8 @@ jobs:
   
       - name: Build project
         run: |
-            cd authorization
-            npm run build
+          cd authorization
+          node server.js
   
   push:
     needs: build
@@ -57,7 +57,7 @@ jobs:
       - name: Build project
         run: |
             cd authorization
-            npm run build
+            node server.js
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
