--- a/.github/workflows/auth_deploy.yml
+++ b/.github/workflows/auth_deploy.yml
@@ -31,6 +31,6 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: frontend/Dockerfile
+          file: authorization/Dockerfile
           push: true
           tags: ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
