--- a/.github/workflows/auth_deploy.yml
+++ b/.github/workflows/auth_deploy.yml
@@ -18,6 +18,9 @@ jobs:
     runs-on: ubuntu-22.04
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+        
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
