--- a/.github/workflows/frontend_deploy.yml
+++ b/.github/workflows/frontend_deploy.yml
@@ -11,7 +11,7 @@ on:
 env:
   NODE_VERSION: '20.18.0'
   IMAGE_NAME: kostyabet228/crm-system
-  IMAGE_TAG: frontend-${{ github.sha }}
+  IMAGE_TAG: frontend-latest
 
 jobs:
   build:
