--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,14 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
+    "change-case": "^5.4.4",
     "framer-motion": "^12.7.4",
     "nprogress": "^0.2.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
+    "react-lazy-load-image-component": "^1.6.3",
     "react-router-dom": "^7.5.0"
   },
   "devDependencies": {
