--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,18 +12,25 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@hookform/resolvers": "^5.0.1",
+    "@iconify/react": "^5.2.1",
     "@mui/icons-material": "^7.0.2",
     "@mui/lab": "^7.0.0-beta.11",
     "@mui/material": "^7.0.2",
+    "axios": "^1.8.4",
     "change-case": "^5.4.4",
     "framer-motion": "^12.7.4",
     "nprogress": "^0.2.0",
+    "numeral": "^2.0.6",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.8",
     "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.56.0",
     "react-lazy-load-image-component": "^1.6.3",
-    "react-router-dom": "^7.5.0"
+    "react-router-dom": "^7.5.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
