--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,12 @@
     "@mui/icons-material": "^7.0.2",
     "@mui/lab": "^7.0.0-beta.11",
     "@mui/material": "^7.0.2",
+    "@tanstack/react-query": "^5.74.4",
+    "@tanstack/react-query-devtools": "^5.74.6",
     "axios": "^1.8.4",
     "change-case": "^5.4.4",
-    "framer-motion": "^12.7.4",
+    "framer-motion": "^12.8.2",
+    "notistack": "^3.0.2",
     "nprogress": "^0.2.0",
     "numeral": "^2.0.6",
     "prop-types": "^15.8.1",
