--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,8 @@
     "@tanstack/react-query-devtools": "^5.74.6",
     "axios": "^1.8.4",
     "change-case": "^5.4.4",
+    "date-fns": "^4.1.0",
+    "emoji-mart": "^5.6.0",
     "framer-motion": "^12.8.2",
     "notistack": "^3.0.2",
     "nprogress": "^0.2.0",
@@ -31,6 +33,7 @@
     "react-dropzone": "^14.3.8",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.56.0",
+    "react-image-lightbox": "^5.1.4",
     "react-lazy-load-image-component": "^1.6.3",
     "react-router-dom": "^7.5.0",
     "yup": "^1.6.1"
