--- a/.github/workflows/frontend_deploy.yml
+++ b/.github/workflows/frontend_deploy.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install dependencies
         run: |
             cd frontend
-            npm install
+            npm install --legacy-peer-deps
   
       - name: Build project
         run: |
@@ -52,7 +52,7 @@ jobs:
       - name: Install dependencies
         run: |
             cd frontend
-            npm install
+            npm install --legacy-peer-deps
   
       - name: Build project
         run: |
