fix: dockerfile dep install
add --legacy-peer-deps flag for install dep and ignore ightbox lib
conflict

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,7 +2,7 @@
 FROM node:alpine AS build_stage
 WORKDIR /app
 COPY ./frontend/package*.json ./
-RUN npm install
+RUN npm install --legacy-peer-deps
 COPY ./frontend/ ./
 RUN npm run build
 
