--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,21 @@
 version: "3.8"
 
 services:
+  db:
+    image: postgres:14 # или любая версия, какая тебе нужна
+    container_name: postgres-db
+    restart: always
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: postgres
+    ports:
+      - "5432:5432"
+    networks:
+      - app-net
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+
   auth-service:
     image: kostyabet228/crm-system:auth_service-latest
     container_name: auth-service
@@ -8,6 +23,14 @@ services:
       - app-net
     ports:
       - "5000:5000"
+    depends_on:
+      - db
+    environment:
+      DB_USER: postgres
+      DB_PASSWORD: postgres
+      DB_HOST: db
+      DB_PORT: 5432
+      DB_NAME: postgres
 
   frontend:
     image: kostyabet228/crm-system:frontend-latest
