--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,21 @@
 version: "3.8"
 
 services:
+  gateway:
+    image: nginx:latest
+    container_name: gateway
+    ports:
+      - "80:80"
+    networks:
+      - app-net
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - frontend
+      - auth-service
+
   db:
-    image: postgres:14 # или любая версия, какая тебе нужна
+    image: postgres:14
     container_name: postgres-db
     restart: always
     environment:
@@ -21,8 +34,8 @@ services:
     container_name: auth-service
     networks:
       - app-net
-    ports:
-      - "5000:5000"
+    expose:
+      - "5000"
     depends_on:
       - db
     environment:
@@ -37,9 +50,12 @@ services:
     container_name: frontend
     networks:
       - app-net
-    ports:
-      - "3000:80"
+    expose:
+      - "80"
 
 networks:
   app-net:
     driver: bridge
+
+volumes:
+  postgres-data: {}
