--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,8 +48,8 @@ services:
     container_name: frontend
     networks:
       - app-net
-    expose:
-      - "3000"
+    ports:
+      - "3000:80"
 
 networks:
   app-net:
