--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,3 @@
-# Stage 1: Build
 FROM node:alpine AS build_stage
 WORKDIR /app
 COPY ./frontend/package*.json ./
@@ -6,7 +5,7 @@ RUN npm install --legacy-peer-deps
 COPY ./frontend/ ./
 RUN npm run build
 
-# Stage 2: Server
 FROM nginx
 COPY --from=build_stage /app/build /usr/share/nginx/html
+COPY ./frontend/nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
