feat: add avatars folder url proxy

--- a/nginx.conf
+++ b/nginx.conf
@@ -12,7 +12,7 @@ http {
     server {
         listen 80;
 
-        location /auth/ {
+        location ~ ^/(auth|uploads/avatars)/ {
             proxy_pass http://auth;
             proxy_redirect off;
             proxy_set_header Host $host;
