feat: add tasks service

--- a/nginx.conf
+++ b/nginx.conf
@@ -9,8 +9,21 @@ http {
         server auth-service:5000;
     }
 
+    upstream tasks {
+        server tasks-service:5001;
+    }
+
     server {
         listen 80;
+
+        location ~ ^/(tasks|priority|state)/ {
+            proxy_pass http://tasks;
+            proxy_redirect off;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
 
         location ~ ^/(auth|uploads/avatars)/ {
             proxy_pass http://auth;
