--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     depends_on:
       - frontend
       - auth-service
+      - tasks-service
 
   db:
     image: postgres:14
@@ -34,6 +35,24 @@ services:
       - app-net
     expose:
       - "5000"
+    depends_on:
+      - db
+    environment:
+      ACCESSTOKENSECRET: "GreatSecretForTokenAccessWith#-~"
+      REFRESHTOKENSECRET: "SomeRandomNewStringForRefreshTokenWithout~#-"
+      DB_USER: postgres
+      DB_PASSWORD: postgres
+      DB_HOST: db
+      DB_PORT: 5432
+      DB_NAME: postgres
+
+  tasks-service:
+    image: kostyabet228/crm-system:tasks_service-latest
+    container_name: tasks-service
+    networks:
+      - app-net
+    expose:
+      - "5001"
     depends_on:
       - db
     environment:
