fix: prod nginx

--- a/nginx/nginx.prod.conf
+++ b/nginx/nginx.prod.conf
@@ -16,7 +16,7 @@ http {
     server {
         listen 80;
 
-        location ~ ^/(tasks|priority|state)/ {
+        location ~ ^/(tasks|tasks/|priority|priority/|state|state/) {
             proxy_pass http://tasks;
             proxy_redirect off;
             proxy_set_header Host $host;
