--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "numeral": "^2.0.6",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
     "react-helmet-async": "^2.0.5",
