--- a/tasks/package.json
+++ b/tasks/package.json
@@ -3,10 +3,13 @@
     "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^2.2.0",
+    "cloudinary": "^2.6.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "path": "^0.12.7",
     "pg": "^8.15.6",
     "sequelize": "^6.37.7"
