fix: --legacy-peer-deps flag in dockerfile tasks services

--- a/tasks/Dockerfile
+++ b/tasks/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:alpine AS build_stage
 WORKDIR /app
 COPY ./tasks/package*.json ./
-RUN npm install
+RUN npm install --legacy-peer-deps
 COPY ./tasks/ ./
 EXPOSE 5001
 CMD ["node", "server.js"]
