--- a/authorization/package.json
+++ b/authorization/package.json
@@ -20,6 +20,7 @@
     "express": "^5.1.0",
     "firebase-admin": "^13.3.0",
     "jsonwebtoken": "^9.0.2",
+    "kafkajs": "^2.2.4",
     "multer": "^1.4.5-lts.2",
     "multer-s3": "^3.0.1",
     "multer-storage-cloudinary": "^4.0.0",
