--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,23 @@
 services:
+  zookeeper:
+    image: confluentinc/cp-zookeeper:latest
+    networks:
+      - app-net
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+
+  kafka:
+    image: confluentinc/cp-kafka:latest
+    ports:
+      - "9092:9092"
+    networks:
+      - app-net
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+
   gateway:
     image: nginx:latest
     container_name: gateway
@@ -48,6 +67,7 @@ services:
       CLOUDINARY_CLOUD_NAME: ${CLOUDINARY_CLOUD_NAME}
       CLOUDINARY_API_KEY: ${CLOUDINARY_API_KEY}
       CLOUDINARY_API_SECRET: ${CLOUDINARY_API_SECRET}
+      KAFKA_BROKER: kafka:9092
 
   tasks-service:
     image: kostyabet228/crm-system:tasks_service-latest
@@ -67,6 +87,7 @@ services:
       DB_PORT: ${DB_PORT}
       DB_NAME: ${DB_NAME}
       GATEWAY_URL: http:/gateway:80
+      KAFKA_BROKER: kafka:9092
 
   frontend:
     image: kostyabet228/crm-system:frontend-latest
