--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -7,6 +7,8 @@ services:
       ZOOKEEPER_CLIENT_PORT: 2181
 
   kafka:
+    depends_on:
+      - zookeeper
     image: confluentinc/cp-kafka:latest
     ports:
       - "9092:9092"
@@ -14,6 +16,7 @@ services:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
 
   gateway:
