--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,13 +7,15 @@ services:
       ZOOKEEPER_CLIENT_PORT: 2181
 
   kafka:
+    depends_on:
+      - zookeeper
     image: confluentinc/cp-kafka:latest
     ports:
       - "9092:9092"
     networks:
       - app-net
     environment:
-      KAFKA_BROKER_ID: 1
+      KAFKA_BROKER_ID: 2
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
