--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -1,6 +1,29 @@
 # docker compose -f docker-compose.local.yml up
 
 services:
+  logstash:
+    image: docker.elastic.co/logstash/logstash:8.5.3
+    environment:
+      - "LOGSTASH_HTTP_HOST=0.0.0.0"
+    ports:
+      - "5044:5044"
+    volumes:
+      - ./logstash/pipeline/logstash-dev.conf:/usr/share/logstash/pipeline/logstash.conf
+
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.5.3
+    environment:
+      - discovery.type=single-node
+    ports:
+      - "9200:9200"
+
+  kibana:
+    image: docker.elastic.co/kibana/kibana:8.5.3
+    environment:
+      - ELASTICSEARCH_HOSTS=http://localhost:9200
+    ports:
+      - "5601:5601"
+
   zookeeper:
     image: confluentinc/cp-zookeeper:latest
     environment:
