--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,33 @@
 services:
+  logstash:
+    image: docker.elastic.co/logstash/logstash:8.5.3
+    environment:
+      - "LOGSTASH_HTTP_HOST=0.0.0.0"
+    ports:
+      - "5044:5044"
+    volumes:
+      - ./logstash/pipeline/logstash-prod.conf:/usr/share/logstash/pipeline/logstash.conf
+    networks:
+      - app-net
+
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.5.3
+    environment:
+      - discovery.type=single-node
+    ports:
+      - "9200:9200"
+    networks:
+      - app-net
+
+  kibana:
+    image: docker.elastic.co/kibana/kibana:8.5.3
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+    ports:
+      - "5601:5601"
+    networks:
+      - app-net
+
   zookeeper:
     image: confluentinc/cp-zookeeper:latest
     networks:
