feat: create logstash elasticsearch & kibana

--- a/logstash/pipeline/logstash-prod.conf
+++ b/logstash/pipeline/logstash-prod.conf
@@ -1,9 +1,9 @@
 input {
   kafka {
-    bootstrap_servers => "kafka-prod:9092"   # Замените на продакшн-адрес Kafka
+    bootstrap_servers => "crm-system-kafka-1:9092"
     topics => ["logs"]
     group_id => "logstash"
-    codec => "json"                           # Добавление кодека для обработки JSON (если данные JSON)
+    codec => "json"
   }
 }
 
@@ -15,7 +15,7 @@ filter {
 
 output {
   elasticsearch {
-    hosts => ["http://elasticsearch-prod:9200"]
+    hosts => ["http://crm-system-elasticsearch-1:9200"]
     index => "logs-prod-%{+YYYY.MM.dd}"
     user => "elastic"
     password => "your-password"
