--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -2,6 +2,10 @@
 
 services:
   logstash:
+    depends_on:
+      - elasticsearch
+      - kafka
+    container_name: logstash
     image: docker.elastic.co/logstash/logstash:8.5.3
     environment:
       - "LOGSTASH_HTTP_HOST=0.0.0.0"
@@ -11,25 +15,36 @@ services:
       - ./logstash/pipeline/logstash-dev.conf:/usr/share/logstash/pipeline/logstash.conf
 
   elasticsearch:
+    container_name: elasticsearch
     image: docker.elastic.co/elasticsearch/elasticsearch:8.5.3
     environment:
       - discovery.type=single-node
+      - xpack.security.enabled=false
+      - xpack.security.http.ssl.enabled=false
+      - ELASTIC_PASSWORD=admin
     ports:
       - "9200:9200"
+    volumes:
+      - es_data:/usr/share/elasticsearch/data
 
   kibana:
+    container_name: kibana
     image: docker.elastic.co/kibana/kibana:8.5.3
     environment:
-      - ELASTICSEARCH_HOSTS=http://localhost:9200
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
     ports:
       - "5601:5601"
+    volumes:
+      - kibana_config:/usr/share/kibana/config
 
   zookeeper:
+    container_name: zookeeper
     image: confluentinc/cp-zookeeper:latest
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
 
   kafka:
+    container_name: kafka
     depends_on:
       - zookeeper
     image: confluentinc/cp-kafka:latest
@@ -38,9 +53,11 @@ services:
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
-      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092,PLAINTEXT_INTERNAL://kafka:29092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_INTERNAL:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT_INTERNAL
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092,PLAINTEXT_INTERNAL://0.0.0.0:29092
 
   gateway:
     image: nginx:latest
@@ -49,3 +66,7 @@ services:
       - "80:80"
     volumes:
       - ./nginx/nginx.local.conf:/etc/nginx/nginx.conf
+
+volumes:
+  kibana_config:
+  es_data:  
