--- a/logstash/pipeline/logstash-dev.conf
+++ b/logstash/pipeline/logstash-dev.conf
@@ -1,6 +1,6 @@
 input {
   kafka {
-    bootstrap_servers => "localhost:9092"
+    bootstrap_servers => "kafka:29092"
     topics => ["logs"]
     group_id => "logstash"
   }
@@ -14,7 +14,9 @@ filter {
 
 output {
   elasticsearch {
-    hosts => ["http://localhost:9200"]
+    hosts => ["http://elasticsearch:9200"]
     index => "logs-%{+YYYY.MM.dd}"
+    user => "elastic"
+    password => "admin"
   }
 }
