--- a/nginx/nginx.local.conf
+++ b/nginx/nginx.local.conf
@@ -1,16 +1,16 @@
 events {}
 
 http {
-    upstream frontend {
-        server host.docker.internal:4000;
-    }
-
     upstream auth {
         server host.docker.internal:5000;
     }
 
     upstream tasks {
         server host.docker.internal:5001;
+    }
+
+    upstream logs {
+        server host.docker.internal:5002;
     }
 
     server {
@@ -27,6 +27,15 @@ http {
 
         location ~ ^/(auth|uploads/avatars)/ {
             proxy_pass http://auth;
+            proxy_redirect off;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location ~ ^/(logs|logs/) {
+            proxy_pass http://logs;
             proxy_redirect off;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
