feat: create log service

--- a/nginx/nginx.local.conf
+++ b/nginx/nginx.local.conf
@@ -34,7 +34,7 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location ~ ^/(logs|logs/) {
+        location ~ ^/(log|log/) {
             proxy_pass http://logs;
             proxy_redirect off;
             proxy_set_header Host $host;
