feat: complete kibana connection

--- a/logstash/pipeline/logstash-prod.conf
+++ b/logstash/pipeline/logstash-prod.conf
@@ -1,9 +1,8 @@
 input {
   kafka {
-    bootstrap_servers => "crm-system-kafka-1:9092"
+    bootstrap_servers => "kafka:9092"
     topics => ["logs"]
     group_id => "logstash"
-    codec => "json"
   }
 }
 
@@ -11,13 +10,22 @@ filter {
   json {
     source => "message"
   }
+
+  mutate {
+    add_field => {
+      "message" => "%{[message]}"
+      "service" => "%{[service]}"
+      "level" => "%{[level]}"
+    }
+  }
 }
 
 output {
   elasticsearch {
-    hosts => ["http://crm-system-elasticsearch-1:9200"]
-    index => "logs-prod-%{+YYYY.MM.dd}"
-    user => "elastic"
-    password => "your-password"
+    hosts => ["http://elasticsearch:9200"]
+    data_stream => "true"
+    data_stream_type => "logs"
+    data_stream_dataset => "all"
+    data_stream_namespace => "prod"
   }
 }
