--- a/nginx/nginx.local.conf
+++ b/nginx/nginx.local.conf
@@ -9,7 +9,7 @@ http {
         server host.docker.internal:5001;
     }
 
-    upstream logs {
+    upstream log {
         server host.docker.internal:5002;
     }
 
@@ -35,7 +35,7 @@ http {
         }
 
         location ~ ^/(log|log/) {
-            proxy_pass http://logs;
+            proxy_pass http://log;
             proxy_redirect off;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
