--- a/nginx/nginx.prod.conf
+++ b/nginx/nginx.prod.conf
@@ -1,16 +1,16 @@
 events {}
 
 http {
-    upstream frontend {
-        server frontend:3000;
-    }
-
     upstream auth {
         server auth-service:5000;
     }
 
     upstream tasks {
         server tasks-service:5001;
+    }
+
+    upstream log {
+        server log-service:5002;
     }
 
     server {
@@ -27,6 +27,15 @@ http {
 
         location ~ ^/(auth|uploads/avatars)/ {
             proxy_pass http://auth;
+            proxy_redirect off;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location ~ ^/(log|log/) {
+            proxy_pass http://log;
             proxy_redirect off;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
